fix issue with grid on mobile screens

--- a/css/com/grid/grid.scss
+++ b/css/com/grid/grid.scss
@@ -1,9 +1,10 @@
 @import "../../_config";
 @import "../../util/grid";
 
-body {
-    @media (max-width: #{$grid-width + ($grid-spacing * 2)}) {
+html {
+    @media (max-width: 1030px) {
         overflow-x: hidden;
+        -webkit-overflow-scrolling: touch;
     }
 }
 
@@ -29,3 +30,4 @@ body {
         @include grid-span($i, $is-fluid: true);
     }
 }
+
