--- a/css/com/layout/layout.scss
+++ b/css/com/layout/layout.scss
@@ -5,14 +5,9 @@
 
 
 .global-content {
-    margin-left: auto;
-    margin-right: auto;
     padding-top: 40px;
     padding-bottom: 40px;
-    max-width: $grid-width;
-
 }
-
 
 .global-layout {
     min-height: 100%;
@@ -20,7 +15,6 @@
 
     &:after {
         display: block;
-        width: 100%;
         height: $footer-height;
         content: '';
     }
