--- a/css/com/nav/nav.css
+++ b/css/com/nav/nav.css
@@ -121,35 +121,35 @@
  * @param {px} $font-size (optional)
 */
 .docs-nav {
-  font-size: 0;
-  margin-right: -20px;
   margin-bottom: 48px;
-  list-style-type: none; }
-  .docs-nav .nav-item {
+  list-style-type: none;
+  font-size: 0; }
+  .docs-nav .nav-item-wrap {
     display: inline-block;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
-    vertical-align: top;
-    font-size: 14px;
-    margin-right: 20px;
-    width: 176px; }
+    width: 20%;
+    padding: 0 20px 0 0;
+    vertical-align: top; }
+    .docs-nav .nav-item-wrap:last-child {
+      padding-right: 0; }
   .docs-nav .nav-item {
     background-image: -moz-linear-gradient(#fafafa, #e4e4e4);
     background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fafafa), to(#e4e4e4));
     background-image: -webkit-linear-gradient(#fafafa, #e4e4e4);
     background-image: -o-linear-gradient(#fafafa, #e4e4e4);
-    display: inline-block;
-    padding: 0;
+    display: block;
+    box-sizing: border-box;
     margin-left: 0;
     box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.3);
-    box-sizing: border-box;
     background-color: #e1e1e1;
     border-radius: 3px;
     text-align: center;
     text-decoration: none;
     color: #000;
     line-height: 50px; }
+    @media (max-width: 750px) {
+      .docs-nav .nav-item {
+        line-height: 35px; } }
     .docs-nav .nav-item:hover, .docs-nav .nav-item.is_active {
       background-image: none;
       background-color: #f9f9f9; }
@@ -161,6 +161,9 @@
     color: #3164a0;
     font-size: 16px;
     text-decoration: none; }
+    @media (max-width: 750px) {
+      .docs-nav .nav-item-text {
+        font-size: 14px; } }
     .docs-nav .nav-item-text:before, .docs-nav .nav-item-text:after {
       position: absolute;
       display: none;
